# alr-tw

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  DATA_POLICY.md  DISCLAIMER.md  README.en.md  README.md  README.zh-TW.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml
demo_data/: synthetic_constitutional.jsonl  synthetic_judgments.jsonl  synthetic_laws.jsonl  synthetic_thesaurus.yml
docs/: AGENTIC_HARNESS_ACCEPTANCE.md  AGENTIC_WORKFLOW.md  AGENT_CLIENT_GUIDE.md  ARCHITECTURE_CONTRACT.md  DEPLOYMENT_STARTING_POINTS.md  ERROR_CODES.md  NEXT_FIX_SPEC.md  OFFICIAL_PROVIDERS.md  PUBLIC_PRIVATE_BOUNDARY.md  PUBLIC_PRIVATE_TRACEABILITY.md  RELEASE_AUDIT_PROCEDURE.md  RELEASE_NOTES.md  STORAGE_AND_PURGE.md  THREAT_MODEL.md  TLR_CANDIDATE_MODE.md  TLR_CANDIDATE_MODE.zh-TW.md  TLR_PROVIDER.md  TOOL_CONTRACT.md  TRACE_SCHEMA.md  TRUST_MODEL.md  V060_BASELINE_AUDIT.md  V060_RELEASE_AUDIT.md  V061_RELEASE_AUDIT.md  V062_RELEASE_AUDIT.md  V0_4_HARDENING_SUMMARY.md  VALIDATION_REPORT.md  architecture_diagram.md  case_study.md  eval_methodology.md  source_policy.md  trust_chain.md
examples/: agentic_mcp_client_demo.py  basic_legal_search.py  build_demo_index.py  external_agent_trace_demo.py  identifier_backed_demo.py  mcp_client_demo.py  trust_pipeline_demo.py  v02_sync_demo.py  validate_citation.py
examples/agentic_runs/: fail_candidate_only.json  fail_low_coverage.json  fail_no_final_citation.json  fail_overstated_case_specific_rule.json  fail_party_argument_as_court_view.json  fail_synthetic_only.json  fail_unsupported_paraphrase.json  fail_verified_cache_incomplete.json  human_review_claim_unchecked.json  human_review_required_claim_support.json  pass_claim_supported.json  pass_official_source.json
examples/reports/: fail_candidate_only.md  fail_low_coverage.md  fail_no_final_citation.md  fail_overstated_case_specific_rule.md  fail_party_argument_as_court_view.md  fail_synthetic_only.md  fail_unsupported_paraphrase.md  fail_verified_cache_incomplete.md  human_review_claim_unchecked.md  human_review_required_claim_support.md  pass_claim_supported.md  pass_official_source.md
scripts/: check_no_forbidden_files.py  check_public_boundary.py
src/alr_tw/: __init__.py  _version.py  cli.py
src/tw_legal_rag_mcp/: __init__.py  contracts.py
(+141 files in other folders)
