[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tw-legal-rag-mcp-reference"
version = "0.1.0"
description = "Reference implementation for Taiwan Legal RAG / MCP source grounding and citation verification."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2",
  "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
