[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alr-tw"
version = "0.6.0"
description = "Agentic Legal RAG / MCP trust harness for Taiwan law."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2",
  "pyyaml>=6",
]

[project.scripts]
alr-tw = "alr_tw.cli:main"
alr-tw-demo = "alr_tw.harness.orchestrator:main"
alr-tw-boundary-check = "alr_tw.scripts.check_public_boundary:main"
alr-tw-mcp = "alr_tw.mcp.server:main"
tw-legal-rag-mcp = "tw_legal_rag_mcp.mcp_server.server:main"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
  "mypy>=1.10",
]
mcp = [
  "mcp>=1.0",
]
live = [
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "lxml>=5",
  "platformdirs>=4",
]
tlr = [
  "httpx>=0.27",
]
all = [
  "mcp>=1.0",
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "lxml>=5",
  "platformdirs>=4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
